# rv1126b_lvgl_desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  desktop.c
lvgl_desktop/: README.md  lvgl_app_ctx.h  lvgl_desktop.c  lvgl_desktop.h
lvgl_desktop/apps/: README.md  detect_app.c  detect_app.h  face_app.c  face_app.h  hair_app.c  hair_app.h  ocr_app.c  ocr_app.h  plate_app.c  plate_app.h  seg_app.c  seg_app.h  system_app.c  system_app.h
lvgl_desktop/components/: README.md
lvgl_desktop/components/camera/: README.md
lvgl_desktop/components/common/: README.md  camera_preview.c  camera_preview.h  result_panel.c  result_panel.h
lvgl_desktop/components/detect/: README.md
lvgl_desktop/components/ocr/: README.md  action_buttons.c  action_buttons.h  ocr_ui_util.c  ocr_ui_util.h
lvgl_desktop/icon/: backbutton_104978.c  backbutton_104978.h
models/: README.md
scripts/: S09gpio_init  S10rv1126b_desktop  install_board.sh  plate_board_test.sh
services/: README.md
services/algorithms/: README.md  algo_runner.c  algo_runner.h  algo_types.h
services/algorithms/detect/: README.md  common.h  detect_algo.cc  detect_algo.h  postprocess.cc  postprocess.h  yolov8.cc  yolov8.h
services/algorithms/face/: README.md  face_algo.cc  face_algo.h  face_align.cc  face_align.h  face_gallery.cc  face_gallery.h  face_rec.cc  face_rec.h  scrfd.cc  scrfd.h
services/algorithms/hair/: README.md  hair_algo.cc  hair_algo.h
services/algorithms/ocr/: README.md  ocr_algo.cc  ocr_algo.h  ppocr_system.cc
services/algorithms/plate/: README.md  common.h  lprnet.cc  lprnet.h  plate_algo.cc  plate_algo.h  plate_test.cc  postprocess.cc  postprocess.h  yolov8_plate.cc  yolov8_plate.h
services/algorithms/seg/: README.md  postprocess.cc  postprocess.h  seg_algo.cc  seg_algo.h  yolov8_seg.cc  yolov8_seg.h
services/camera/: README.md  camera_parser.c  camera_parser.h  camera_service.c  camera_service.h  camera_types.h
sys/: gpio.c  gpio.h  soc.c
